--- a/src/main/resources/templates/_nav-components.html
+++ b/src/main/resources/templates/_nav-components.html
@@ -19,7 +19,7 @@
   <body>
   
   <video th:fragment="background-video" id="background-video" autoplay loop muted poster="">
-  <source src="vid/face-time_trim.mp4" type="video/mp4">
+  <source src="vid/face-time.mp4" type="video/mp4">
 </video>
   
       
