--- a/src/main/resources/templates/_nav-components.html
+++ b/src/main/resources/templates/_nav-components.html
@@ -27,7 +27,7 @@
 
     <div style="margin-right: 20px; padding-right: 20px" class="">
       <h4 style="text-shadow: 3px 3px 4px #000000;">
-        <a href="/" class="" style="text-align: center; font-weight: bold; color: white;">
+        <a href="/home" class="" style="text-align: center; font-weight: bold; color: white;">
            <img style="width: 55px; height: 60px; box-shadow: 4px 4px 8px #000000; border-style: solid; border-radius: 50%; border-color: gold;" th:src="@{/img/horsefire.jpg}" alt="logo" /> 
 
 <!--                     <span>D</span> -->
@@ -56,6 +56,14 @@
   
   
     <ul class="navbar-nav ml-auto">
+    
+          <li class="nav-item active" style="border: solid gold; border-radius: 15px; margin-right: 20px">
+           
+        <a class="nav-link text-white" href="/upload" style="text-align: center; font-size: 1.23em; font-weight: bold; text-shadow: 3px 3px 4px #000000;" id="" role="" data-toggle="" aria-expanded="">
+          Importer un fichier
+        </a>
+    
+      </li>
    
            <li class="nav-item dropdown" style="border: solid gold; border-radius: 15px; margin-right: 20px">
            
