--- a/src/main/resources/templates/_components.html
+++ b/src/main/resources/templates/_components.html
@@ -125,7 +125,7 @@
      </select>
     </div>
 
-      <button type="submit" class="btn btn-primary">Envoyer</button>
+      <button type="submit" class="btn btn-primary text-dark">Envoyer</button>
  </form>
 
 </div>
@@ -242,7 +242,7 @@
      </select>
     </div>
 
-      <button type="submit" class="btn btn-primary">Envoyer</button>
+      <button type="submit" class="btn btn-primary text-dark">Envoyer</button>
  </form>
 
 </div>
@@ -358,7 +358,7 @@
      </select>
     </div>
 
-      <button type="submit" class="btn btn-primary">Envoyer</button>
+      <button type="submit" class="btn btn-primary text-dark">Envoyer</button>
  </form>
 
 </div>
@@ -474,7 +474,7 @@
      </select>
     </div>
 
-      <button type="submit" class="btn btn-primary">Envoyer</button>
+      <button type="submit" class="btn btn-primary text-dark">Envoyer</button>
  </form>
 
 </div>
@@ -590,7 +590,7 @@
      </select>
     </div>
 
-      <button type="submit" class="btn btn-primary">Envoyer</button>
+      <button type="submit" class="btn btn-primary text-dark">Envoyer</button>
  </form>
 
 </div>
@@ -706,7 +706,7 @@
      </select>
     </div>
 
-      <button type="submit" class="btn btn-primary">Envoyer</button>
+      <button type="submit" class="btn btn-primary text-dark">Envoyer</button>
  </form>
 
 </div>
@@ -822,7 +822,7 @@
      </select>
     </div>
 
-      <button type="submit" class="btn btn-primary">Envoyer</button>
+      <button type="submit" class="btn btn-primary text-dark">Envoyer</button>
  </form>
 
 </div>
@@ -938,7 +938,7 @@
      </select>
     </div>
 
-      <button type="submit" class="btn btn-primary">Envoyer</button>
+      <button type="submit" class="btn btn-primary text-dark">Envoyer</button>
  </form>
 
 </div>
@@ -1054,7 +1054,7 @@
      </select>
     </div>
 
-      <button type="submit" class="btn btn-primary">Envoyer</button>
+      <button type="submit" class="btn btn-primary text-dark">Envoyer</button>
  </form>
 
 </div>
@@ -1170,7 +1170,7 @@
      </select>
     </div>
 
-      <button type="submit" class="btn btn-primary">Envoyer</button>
+      <button type="submit" class="btn btn-primary text-dark">Envoyer</button>
  </form>
 
 </div>
@@ -1286,7 +1286,7 @@
      </select>
     </div>
 
-      <button type="submit" class="btn btn-primary">Envoyer</button>
+      <button type="submit" class="btn btn-primary text-dark">Envoyer</button>
  </form>
 
 </div>
@@ -1402,7 +1402,7 @@
      </select>
     </div>
 
-      <button type="submit" class="btn btn-primary">Envoyer</button>
+      <button type="submit" class="btn btn-primary text-dark">Envoyer</button>
  </form>
 
 </div>
@@ -1532,7 +1532,7 @@
 <!--      </select> -->
 <!--     </div> -->
 
-      <button type="submit" class="btn btn-primary">Envoyer</button>
+      <button type="submit" class="btn btn-primary text-dark">Envoyer</button>
  </form>
 
 </div>
@@ -1609,7 +1609,7 @@
      </select>
     </div>
 
-      <button type="submit" class="btn btn-primary">Envoyer</button>
+      <button type="submit" class="btn btn-primary text-dark">Envoyer</button>
  </form>
 
 </div>
@@ -1686,7 +1686,7 @@
      </select>
     </div>
 
-      <button type="submit" class="btn btn-primary">Envoyer</button>
+      <button type="submit" class="btn btn-primary text-dark">Envoyer</button>
  </form>
 
 </div>
@@ -1763,7 +1763,7 @@
      </select>
     </div>
 
-      <button type="submit" class="btn btn-primary">Envoyer</button>
+      <button type="submit" class="btn btn-primary text-dark">Envoyer</button>
  </form>
 
 </div>
@@ -1840,7 +1840,7 @@
      </select>
     </div>
 
-      <button type="submit" class="btn btn-primary">Envoyer</button>
+      <button type="submit" class="btn btn-primary text-dark">Envoyer</button>
  </form>
 
 </div>
@@ -1917,7 +1917,7 @@
      </select>
     </div>
 
-      <button type="submit" class="btn btn-primary">Envoyer</button>
+      <button type="submit" class="btn btn-primary text-dark">Envoyer</button>
  </form>
 
 </div>
@@ -1994,7 +1994,7 @@
      </select>
     </div>
 
-      <button type="submit" class="btn btn-primary">Envoyer</button>
+      <button type="submit" class="btn btn-primary text-dark">Envoyer</button>
  </form>
 
 </div>
@@ -2071,7 +2071,7 @@
      </select>
     </div>
 
-      <button type="submit" class="btn btn-primary">Envoyer</button>
+      <button type="submit" class="btn btn-primary text-dark">Envoyer</button>
  </form>
 
 </div>
@@ -2148,7 +2148,7 @@
      </select>
     </div>
 
-      <button type="submit" class="btn btn-primary">Envoyer</button>
+      <button type="submit" class="btn btn-primary text-dark">Envoyer</button>
  </form>
 
 </div>
@@ -2225,7 +2225,7 @@
      </select>
     </div>
 
-      <button type="submit" class="btn btn-primary">Envoyer</button>
+      <button type="submit" class="btn btn-primary text-dark">Envoyer</button>
  </form>
 
 </div>
@@ -2302,7 +2302,7 @@
      </select>
     </div>
 
-      <button type="submit" class="btn btn-primary">Envoyer</button>
+      <button type="submit" class="btn btn-primary text-dark">Envoyer</button>
  </form>
 
 </div>
@@ -2379,7 +2379,7 @@
      </select>
     </div>
 
-      <button type="submit" class="btn btn-primary">Envoyer</button>
+      <button type="submit" class="btn btn-primary text-dark">Envoyer</button>
  </form>
 
 </div>
