--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,12 +8,35 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link th:href="@{css/style.css}" rel="stylesheet" />
+    <link th:href="@{css/fire.css}" rel="stylesheet" />
 </head>
 <body>
         		<div th:replace="_nav-components :: nav">...</div>
 
 
+<div class="cont">
+<!-- <video src="vid/fire.mp4" autoplay muted></video> -->
+<video style="width: 100%;" class="vvideo" id="myVideo" src="vid/fire.mp4" autoplay muted ></video>
+<!-- <video class="vvideo" id="myVideo" src="vid/nelheart2.mp4" autoplay muted loop></video> -->
 
+ <div class="text glow">
+  
+    <span>D</span>
+    <span>j</span>
+    <span>e</span>
+    <span>T</span>
+    <span>a</span>
+    <span>y</span>
+    <span>'</span>
+    <span>I</span>
+    <span>n</span>
+    <span>f</span>
+    <span>o</span>
+    <span>s</span>
+     
+  </div>
+  
+</div>
 
 
 	<script type="text/javascript" th:src="@{/js/test.js}"></script>
