--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,7 +10,7 @@
     <link th:href="@{css/style.css}" rel="stylesheet" />
     <link th:href="@{css/fire.css}" rel="stylesheet" />
 </head>
-<body>
+<body style="background-color: black;">
         		<div th:replace="_nav-components :: nav">...</div>
 
 
