--- a/src/main/resources/static/css/fire.css
+++ b/src/main/resources/static/css/fire.css
@@ -115,12 +115,11 @@ span:nth-child(12){
 	-moz-animation-delay: 3.6s;
 }
 
-span:nth-child(13){
-	animation-delay: 3.9s;
-	-webkit-animation-delay: 3.9s;
-	-moz-animation-delay: 3.9s;
-}
-
+/* span:nth-child(13){ */
+/* 	animation-delay: 3.9s; */
+/* 	-webkit-animation-delay: 3.9s; */
+/* 	-moz-animation-delay: 3.9s; */
+/* } */
 /* span:nth-child(14){ */
 /* 	animation-delay: 4.2s; */
 /* 	-webkit-animation-delay: 4.2s; */
