--- a/src/main/resources/templates/_nav-components.html
+++ b/src/main/resources/templates/_nav-components.html
@@ -45,7 +45,9 @@
 <!--                     <span>o</span> -->
 <!--                     <span>s</span> -->
           
-           DjeTay'Infos       
+<!--            DjeTay'Infos  -->
+           A la recherche du spécialiste 
+               
 		</a>		
        </h4>
       </div>
