--- a/src/main/resources/templates/_nav-components.html
+++ b/src/main/resources/templates/_nav-components.html
@@ -9,9 +9,9 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-<!--     <link th:href="@{css/style.css}" rel="stylesheet" /> -->
-    <link th:href="@{css/nav.css}" rel="stylesheet" />
-        <link th:href="@{css/bounce.css}" rel="stylesheet" />
+    <link th:href="@{css/style.css}" rel="stylesheet" />
+<!--     <link th:href="@{css/nav.css}" rel="stylesheet" /> -->
+<!--         <link th:href="@{css/bounce.css}" rel="stylesheet" /> -->
     
     
 
