--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,9 +14,9 @@
         		<div th:replace="_nav-components :: nav">...</div>
 
 
-<div class="cont">
+<!-- <div class="cont"> -->
 <!-- <video src="vid/fire.mp4" autoplay muted></video> -->
-<video style="width: 100%;" class="vvideo" id="myVideo" src="vid/fire.mp4" autoplay muted ></video>
+<video style="" class="vvideo" id="myVideo" src="vid/fire.mp4" autoplay muted ></video>
 <!-- <video class="vvideo" id="myVideo" src="vid/nelheart2.mp4" autoplay muted loop></video> -->
 
  <div class="text glow">
@@ -36,7 +36,7 @@
      
   </div>
   
-</div>
+<!-- </div> -->
 
 
 	<script type="text/javascript" th:src="@{/js/test.js}"></script>
