--- a/src/main/resources/templates/reunion-infos.html
+++ b/src/main/resources/templates/reunion-infos.html
@@ -8,16 +8,16 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link th:href="@{css/style.css}" rel="stylesheet" />
-<!--         <link th:href="@{css/bounce.css}" rel="stylesheet" /> -->
+    <link th:href="@{css/fire.css}" rel="stylesheet" />
     
 </head>
 
 <body>
+        		<div th:replace="_nav-components :: nav">...</div>
 
 		        		<video th:replace="_nav-components :: background-video"></video>
 
 
-        		<div th:replace="_nav-components :: nav">...</div>
         		
 <!-- <h3 style="text-align: center; margin-bottom: 30px; text-decoration: underline;">Bienvenue sur Djetay'Infos</h3> -->
 
