--- a/src/main/resources/templates/_nav-components.html
+++ b/src/main/resources/templates/_nav-components.html
@@ -64,7 +64,7 @@
           <li class="nav-item active" style="border: solid gold; border-radius: 15px; margin-right: 20px">
            
         <a class="nav-link text-white" href="/upload" style="text-align: center; font-size: 1.23em; font-weight: bold; text-shadow: 3px 3px 4px #000000;" id="" role="" data-toggle="" aria-expanded="">
-          Importer un fichier
+          Importer donn&eacute;es
         </a>
     
       </li>
@@ -78,9 +78,10 @@
         </a>
         <div style="border: solid 3px gold; padding: 5px;" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
          
-          <form style="margin-bottom: 5px;" method="POST" th:action="@{/redirect-to-reunion-infos?jour=${journav}}" enctype="multipart/form-data">
+          <form style="margin-bottom: 5px;" method="" th:action="@{/redirect-to-reunion-infos}" enctype="multipart/form-data">
 
                             <div class="">
+                            <input type="hidden" name="jour" th:value="${journav}"></input>
 								<label class="text-dark" style="font-weight: bold;">Choisir une R&eacute;union:</label><br> 
 								<select class="form-control form-control-user" name="reunion" required="required">
 									<option value="">--Choisir--</option>
