--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -97,6 +97,29 @@ table{
 /* } */
 
 
+/* Flèche vers haut de la page */
+
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: red;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+  
+  margin-bottom: 80px; 
+}
+
+#myBtn:hover {
+  background-color: #555;
+}
 
 
 /*                           COLORS */
