--- a/src/main/resources/templates/_components.html
+++ b/src/main/resources/templates/_components.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link th:href="@{css/style.css}" rel="stylesheet" />
@@ -13,6 +15,14 @@
     <title></title>
   </head>
   <body>
+  
+  /////////::buttonup
+  <div>
+	<button th:fragment="buttonup" class="btn-primary" onclick="topFunction()"
+		id="myBtn" title="Go to top">
+		<i data-feather="arrow-up"></i>
+	</button>
+	</div>
   
   
   <!--             //First Collapse chronos BEGIN-->
@@ -2388,8 +2398,10 @@
               
  
   
+	<script src="https://unpkg.com/feather-icons"></script>
 
     <!-- Optional JavaScript; choose one of the two! -->
+    	<script type="text/javascript" th:src="@{/js/test.js}"></script>
     
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
