--- a/src/main/resources/templates/_components.html
+++ b/src/main/resources/templates/_components.html
@@ -16,7 +16,7 @@
   </head>
   <body>
   
-  /////////::buttonup
+<!--   /////////::buttonup -->
   <div>
 	<button th:fragment="buttonup" class="btn-primary" onclick="topFunction()"
 		id="myBtn" title="Go to top">
